tests/snapshots/snapshot_comprehensive__snap_receipt_with_full_usage.snap
---
source: tests/snapshot_comprehensive.rs
expression: receipt_to_value(&r)
---
{
  "artifacts": [],
  "backend": {
    "adapter_version": null,
    "backend_version": "1.0.0",
    "id": "mock"
  },
  "capabilities": {},
  "meta": {
    "contract_version": "abp/v0.1",
    "duration_ms": 60000,
    "finished_at": "2025-01-15T10:31:00Z",
    "run_id": "00000000-0000-0000-0000-000000000001",
    "started_at": "2025-01-15T10:30:00Z",
    "work_order_id": "00000000-0000-0000-0000-000000000002"
  },
  "mode": "mapped",
  "outcome": "complete",
  "receipt_sha256": null,
  "trace": [],
  "usage": {
    "cache_read_tokens": 200,
    "cache_write_tokens": 100,
    "estimated_cost_usd": 0.042,
    "input_tokens": 1500,
    "output_tokens": 800,
    "request_units": 5
  },
  "usage_raw": {
    "completion_tokens": 800,
    "prompt_tokens": 1500
  },
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  }
}
