tests/snapshots/snapshot_comprehensive__snap_support_level_all_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "native",
  "emulated",
  "unsupported",
  {
    "restricted": {
      "reason": "policy restriction"
    }
  }
]
