tests/snapshots/snapshot_comprehensive__snap_work_order_with_context_snippets.snap
---
source: tests/snapshot_comprehensive.rs
expression: wo
---
{
  "id": "00000000-0000-0000-0000-000000000001",
  "task": "Fix bug",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [
      "src/main.rs",
      "Cargo.toml"
    ],
    "snippets": [
      {
        "name": "error_log",
        "content": "thread 'main' panicked at 'index out of bounds'"
      }
    ]
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
