tests/snapshots/snapshot_comprehensive__snap_work_order_with_model_and_budget.snap
---
source: tests/snapshot_comprehensive.rs
expression: wo
---
{
  "id": "00000000-0000-0000-0000-000000000001",
  "task": "Refactor auth module",
  "lane": "workspace_first",
  "workspace": {
    "root": "/tmp/workspace",
    "mode": "pass_through",
    "include": [
      "src/**/*.rs"
    ],
    "exclude": [
      "target/**"
    ]
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "gpt-4",
    "vendor": {},
    "env": {},
    "max_budget_usd": 5.0,
    "max_turns": 20
  }
}
