tests/snapshots/snapshot_comprehensive__snap_workspace_mode_variants.snap
---
source: tests/snapshot_comprehensive.rs
expression: variants
---
[
  "staged",
  "pass_through"
]
